<resources>
    <string name="app_name">CDK Onboarding application</string>
    <string name="place_holder_username">Email id / username</string>
    <string name="place_holder_password">Password</string>
    <string name="place_holder_login">Login</string>
    <string name="header_cdk_home_screen">Enter details</string>

    <!-->
        CDK Home page string variables
    -->
    <string name="cdk_home_page_banner">Welcome to CDK family!</string>
    <string name="title_webpage_list">webpages</string>
    <string name="title_webpage_detail">Webpage Detail</string>

    <!--
        CDK Menu items details
    -->
    <string name="menu_item_home">Home</string>
    <string name="menu_item_my_details">My details</string>
    <string name="menu_item_about_cdk">About CDK</string>
    <string name="menu_item_raise_ticket">Raise tickets</string>
    <string name="menu_item_logout">Logout</string>
    <string name="menu_item_floor_plan">Floor plan</string>

    <!--
        CDK Raise ticket
     -->
    <string name="title_raise_tickets">My Tickets</string>
    <string-array name="ticket_types">
        <item>HR</item>
        <item>Facilities</item>
        <item>Admin</item>
        <item>Manager</item>
        <item>IT</item>
    </string-array>
    <!--
        Sample data
    -->
    <string name="txt_sample_user">Rahul Juluru</string>
    <string name="txt_sample_user_email">rahul.juluru@gmail.com</string>
    <string name="btn_logout_google_account">Logout</string>
</resources>
