<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.cdk.onboarding.view.main.MainActivity"
    android:theme="@style/AppTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/prof_section"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:weightSum="1">

        <ImageView
            android:id="@+id/prof_pic"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:src="@drawable/admin"
            android:layout_weight="0.20" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_google_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_sample_user"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_google_user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txt_sample_user_email"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_logout_google_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout_google_account" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/frg_cdk_global"
        android:name="com.cdk.onboarding.view.base.CDKIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="83dp"
        tools:layout="@layout/cdk_icon_fragment"
        android:layout_gravity="center"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        >

    </com.google.android.gms.common.SignInButton>


</LinearLayout>
